[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/actors/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/screens/game/Game.gd" type="Script" id=2]
[ext_resource path="res://src/actors/castle/Castle.tscn" type="PackedScene" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -150.0
margin_top = -122.0
margin_right = 912.0
margin_bottom = 1438.0
color = Color( 0, 0.360784, 0.290196, 1 )

[node name="Castle" parent="." instance=ExtResource( 3 )]
position = Vector2( 362, 644 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 359, 643 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="LifeBar" type="ProgressBar" parent="."]
margin_left = 31.0
margin_top = 18.0
margin_right = 303.0
margin_bottom = 53.0
step = 1.0
value = 100.0
percent_visible = false

[node name="WaveProgressBar" type="ProgressBar" parent="."]
margin_left = 424.0
margin_top = 18.0
margin_right = 696.0
margin_bottom = 53.0
step = 1.0
percent_visible = false

[connection signal="zombie_died" from="Castle" to="." method="_on_Castle_zombie_died"]
[connection signal="zombie_entered" from="Castle" to="." method="_on_Castle_zombie_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
